# autoware_tcl_interfaces

autoware_tcl_interface/: CMakeLists.txt  package.xml
autoware_tcl_interface/include/autoware_tcl_interface/: autoware_tcl_interface.hpp
autoware_tcl_interface/src/: autoware_tcl_interface.cpp
autoware_tcl_msgs/: CMakeLists.txt  package.xml
autoware_tcl_msgs/msg/: DetectedObjects.msg  DetectedObjectsWithFeature.msg  Path.msg  PathWithLaneId.msg  PredictedObjects.msg  TrackedObjects.msg  Trajectory.msg
